<resources>
    <string name="app_name">Calculator</string>
    <string name="btnZero">0</string>
    <string name="btnOne">1</string>
    <string name="btnTwo">2</string>
    <string name="btnThree">3</string>
    <string name="btnFour">4</string>
    <string name="btnFive">5</string>
    <string name="btnSix">6</string>
    <string name="btnSeven">7</string>
    <string name="btnEight">8</string>
    <string name="btnNine">9</string>
    <string name="btnBackspace">回退</string>
    <string name="btnClear">清空</string>
    <string name="btnDivide">/</string>
    <string name="btnMultiply">X</string>
    <string name="btnSubtract">-</string>
    <string name="btnAdd">+</string>
    <string name="btnPoint">.</string>
    <string name="btnEqual">=</string>
</resources>
