<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:rowCount="5"
    android:background="@color/black"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_columnSpan="4"
        android:background="@android:color/background_light"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:gravity="right|center|end"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/nbsp"
        android:layout_columnSpan="2"
        android:layout_marginTop="5dp"
        android:width="200dp"
        android:height="65dp"
        android:background="@drawable/selector_btn_click_bg"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnBackspace"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="9dp"
        android:width="90dp"
        android:height="65dp"
        android:background="@drawable/selector_btn_click_bg"
        android:text="@string/btnBackspace"
        android:textColor="@android:color/background_light"

        android:textSize="20sp" />

    <Button
        android:id="@+id/btnClear"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="9dp"
        android:width="90dp"
        android:height="65dp"
        android:background="@drawable/selector_btn_click_bg"
        android:text="@string/btnClear"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSeven"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="8dp"
        android:width="90dp"
        android:height="97.5dp"
        android:background="@drawable/selector_btn_click_bg"
        android:text="@string/btnSeven"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnEight"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="9dp"
        android:width="90dp"
        android:height="97.5dp"
        android:background="@drawable/selector_btn_click_bg"
        android:text="@string/btnEight"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnNine"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="8dp"
        android:width="90dp"
        android:height="97.5dp"
        android:background="@drawable/selector_btn_click_bg"
        android:text="@string/btnNine"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:width="90dp"
        android:height="97.5dp"
        android:background="@drawable/selector_btn_click_bg"
        android:text="@string/btnDivide"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnFour"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="8dp"
        android:width="90dp"
        android:height="97.5dp"
        android:background="@drawable/selector_btn_click_bg"
        android:text="@string/btnFour"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnFive"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="9dp"
        android:width="90dp"
        android:height="97.5dp"
        android:background="@drawable/selector_btn_click_bg"
        android:text="@string/btnFive"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSix"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="8dp"
        android:width="90dp"
        android:height="97.5dp"
        android:background="@drawable/selector_btn_click_bg"
        android:text="@string/btnSix"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:width="90dp"
        android:height="97.5dp"
        android:background="@drawable/selector_btn_click_bg"
        android:text="@string/btnMultiply"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnOne"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="8dp"
        android:width="90dp"
        android:height="97.5dp"
        android:background="@drawable/selector_btn_click_bg"
        android:text="@string/btnOne"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnTwo"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="9dp"
        android:width="90dp"
        android:height="97.5dp"
        android:background="@drawable/selector_btn_click_bg"
        android:text="@string/btnTwo"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnThree"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="8dp"
        android:width="90dp"
        android:height="97.5dp"
        android:background="@drawable/selector_btn_click_bg"
        android:text="@string/btnThree"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSubtract"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:width="90dp"
        android:height="97.5dp"
        android:background="@drawable/selector_btn_click_bg"
        android:text="@string/btnSubtract"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnPoint"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="8dp"
        android:width="90dp"
        android:height="97.5dp"
        android:background="@drawable/selector_btn_click_bg"
        android:text="@string/btnPoint"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnZero"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="9dp"
        android:width="90dp"
        android:height="97.5dp"
        android:background="@drawable/selector_btn_click_bg"
        android:text="@string/btnZero"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnEqual"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="8dp"
        android:width="90dp"
        android:height="97.5dp"
        android:background="@drawable/selector_btn_click_bg"
        android:text="@string/btnEqual"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:width="90dp"
        android:height="97.5dp"
        android:background="@drawable/selector_btn_click_bg"
        android:text="@string/btnAdd"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

</GridLayout>